<resources>
    <string name="app_name">CheckPoint 02</string>
    <string name="informaMaterial">Informe o material que deseja:</string>
    <string name="pisoBranco">Piso Branco Baixo Brilho</string>
    <string name="pisoAlbania">Piso Albania 45x45</string>
    <string name="porcelanatoPerlato">Porcelanato Perlato Branco</string>
    <string name="revestimentoMosaico">Revestimento Mosaico</string>
    <string name="informeMedida">Informe as medidas em m2:</string>
    <string name="freteMegaRapido">Ultra frete mega rápido</string>
    <string name="calcular">Calcular</string>
    <string name="medidaNaoPreenchida">Informe corretamente a medida em metros quadrados!</string>
    <string name="medidaNegativa">Informe um número positivo em metros quadrados!</string>
    <string name="ocorreuErro">Ocorreu um erro:</string>
</resources>