<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    xmlns:android="http://schemas.android.com/apk/res/android" >

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:text="@string/informaMaterial"
        android:textSize="22sp"/>

    <RadioGroup
        android:id="@+id/rdgMateriais"
        android:layout_height="wrap_content"
        android:layout_width="match_parent">

        <RadioButton
            android:checked="true"
            android:id="@+id/rdbPisoBranco"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:text="@string/pisoBranco"/>

        <RadioButton
            android:id="@+id/rdbPisoAlbania"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:text="@string/pisoAlbania"/>

        <RadioButton
            android:id="@+id/rdbPorcelanatoPolato"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:text="@string/porcelanatoPerlato"/>

        <RadioButton
            android:id="@+id/rdbRevestimentoMosaico"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:text="@string/revestimentoMosaico"/>
    </RadioGroup>

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:text="@string/informeMedida"
        android:textSize="22sp"/>

    <EditText
        android:id="@+id/edtMetrosQuadrados"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:inputType="numberDecimal"
        android:text="10"/>

    <CheckBox
        android:id="@+id/chkFrete"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:text="@string/freteMegaRapido"/>

    <Button
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:onClick="calcular"
        android:text="@string/calcular"/>

    <TextView
        android:id="@+id/txtResultado"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:text="R$ 0.00"
        android:textAlignment="center"
        android:textSize="32sp"/>
</LinearLayout>